Issue 1
Squashed commit of the following:

commit da4868e972c845abd4ed0211737fa81136010687
Author: Jack Ross, III <mrjackross@gmail.com>
Date:   Mon Jun 12 21:57:18 2017 -0400

    Issue 1: Completed. Now deleting all of the activities and weights
    belonging to a user after deleting a user

commit fe59167a11fffac5be0b7e297264234c4685a5f6
Author: Jack Ross, III <mrjackross@gmail.com>
Date:   Mon Jun 12 21:22:25 2017 -0400

    Issue 1: No deleting users/people

commit a451a7e57ba9c27e750b0a2cf49949b9e4574e2f
Author: Jack Ross, III <mrjackross@gmail.com>
Date:   Mon Jun 12 21:19:35 2017 -0400

    Issue 1: Now deleting activities

commit e576ba24346504c0302129d11882e1d819d3fc93
Author: Jack Ross, III <mrjackross@gmail.com>
Date:   Mon Jun 12 21:15:44 2017 -0400

    Issue 1: Now deleting weights from the database

commit bb513bb106c681dcbf8de3fd5a27ea632f0c4584
Author: Jack Ross, III <mrjackross@gmail.com>
Date:   Mon Jun 12 21:00:37 2017 -0400

    Finished with the displaying for deleting records and posting to the
    backend. Now need to update the actual backend with the records that
    have been updated

commit 7bda535bd905170297824c6ad38136f12ab36d95
Author: Jack Ross, III <mrjackross@gmail.com>
Date:   Sun Jun 11 10:37:51 2017 -0400

    Issue 1: Started work on displaying ability to delete
    weights/activities/users

--- a/mean-docker/plusminusangular/src/app/app.component.css
+++ b/mean-docker/plusminusangular/src/app/app.component.css
@@ -1,3 +1,10 @@
 .card-title {
     font-weight: normal;
 }
+
+.deleteField {
+    color: red;
+    font-weight: bold;
+    padding-left: 20px;
+    cursor: pointer;
+}
